minikube/cassandra.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cassandra
  namespace: thingsboard
  labels:
    app: cassandra
spec:
  serviceName: cassandra
  replicas: 1
  selector:
    matchLabels:
      app: cassandra
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      volumes:
        - name: cassandra-probe-config
          configMap:
            name: cassandra-probe-config
            items:
              - key: probe
                path: ready-probe.sh
                mode: 0777
      terminationGracePeriodSeconds: 1800
      containers:
        - name: cassandra
          image: cassandra:4.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 7000
              name: intra-node
            - containerPort: 7001
              name: tls-intra-node
            - containerPort: 7199
              name: jmx
            - containerPort: 9042
              name: cql
            - containerPort: 9160
              name: thrift
          resources:
            limits:
              cpu: "1000m"
              memory: 2Gi
            requests:
              cpu: "1000m"
              memory: 2Gi
          securityContext:
            capabilities:
              add:
                - IPC_LOCK
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - nodetool drain
          readinessProbe:
            exec:
              command:
              - /bin/bash
              - -c
              - /probe/ready-probe.sh
            initialDelaySeconds: 60
            timeoutSeconds: 5
          volumeMounts:
            - name: cassandra-probe-config
              mountPath: /probe
            - name: cassandra-data
              mountPath: /var/lib/cassandra
              readOnly: false
  volumeClaimTemplates:
    - metadata:
        name: cassandra-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cassandra
  name: cassandra
  namespace: thingsboard
spec:
  clusterIP: None
  ports:
    - port: 9042
  selector:
    app: cassandra
---
